--- a/BoutikOnline/Views/Home/_DevDisplay.cshtml
+++ b/BoutikOnline/Views/Home/_DevDisplay.cshtml
@@ -8,14 +8,14 @@
                 <h2>@Model.DevHourCost /Hours</h2> 
                 <p>@Model.DevFirstName @Model.DevName</p>
                 <p>@Model.NomCategPrincipale</p>
-                <a href="~/Boutik/Shop/Details/@Model.IdDev" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Details</a>
+                <a href="~/Dev/Details/@Model.IdDev" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Details</a>
             </div>
             <div class="product-overlay">
                 <div class="overlay-content">
                     <h2>@Model.DevHourCost /Hours</h2>
                     <p>@Model.DevFirstName @Model.DevName</p>
                     <p>@Model.NomCategPrincipale</p>
-                    <a href="~/Boutik/Shop/Details/@Model.IdDev" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Details</a>
+                    <a href="~/Dev/Details/@Model.IdDev" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Details</a>
                 </div>
             </div>
         </div>
