--- a/BoutikOnline/Views/Shared/_Layout.cshtml
+++ b/BoutikOnline/Views/Shared/_Layout.cshtml
@@ -49,53 +49,60 @@
 
         <div class="header-middle">
             <!--header-middle-->
-        <div id="banner">
+            <div id="banner">
 
-            <div class="row shop">
-                <div class=" col-sm-4">
-                <div class="logo pull-left">
-                    <a href="index.html"><span>E</span>-Shop</a>
-                </div>
-                <div class="btn-group pull-right">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                            USA
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Canada</a></li>
-                            <li><a href="#">UK</a></li>
-                        </ul>
+                <div class="row shop">
+                    <div class=" col-sm-4">
+                        <div class="logo pull-left">
+                            <a href="index.html"><span>E</span>-Shop</a>
+                        </div>
+                        <div class="btn-group pull-right">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
+                                    USA
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Canada</a></li>
+                                    <li><a href="#">UK</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
+                                    DOLLAR
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Canadian Dollar</a></li>
+                                    <li><a href="#">Pound</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                            DOLLAR
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Canadian Dollar</a></li>
-                            <li><a href="#">Pound</a></li>
-                        </ul>
+                    <div class="col-sm-8">
+                        <div class="shop-menu pull-right">
+                            <ul class="nav navbar-nav">
+                                <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
+                                <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
+                                <li><a href="~/Boutik/Panier/CheckOut/"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+                                <li><a href="~/Boutik/Panier/Index"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                                @if (Session["login"] == null)
+                                {
+                                    <li><a href="~/Membre/Login/LoginForm"><i class="fa fa-lock"></i> Login</a></li>
+                                }
+                                else
+                                {
+                                    <li><a href="/Login/LogOut"><i class="fa fa-lock"></i> @Session["login"]</a></li>
+                                }
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-                <div class="col-sm-8">
-                    <div class="shop-menu pull-right">
-                        <ul class="nav navbar-nav">
-                            <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
-                            <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-                            <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                            <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-            
-        <div class="container">
-                
+
+            <div class="container">
+
             </div>
 
         </div><!--/header-middle-->
@@ -120,9 +127,9 @@
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="shop.html">Products</a></li>
                                         <li><a href="product-details.html">Product Details</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="login.html">Login</a></li>
+                                        <li><a href="~/Boutik/Panier/CheckOut/">Checkout</a></li>
+                                        <li><a href="~/Boutik/Panier/Index">Cart</a></li>
+                                        <li><a href="~/Membre/Login/LoginForm">Login</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
@@ -146,7 +153,6 @@
             </div>
         </div><!--/header-bottom-->
     </header><!--/header-->
-
     @RenderBody()
 
     <footer id="footer">
