--- a/BoutikOnline/Areas/Boutik/Views/Panier/CheckOut.cshtml
+++ b/BoutikOnline/Areas/Boutik/Views/Panier/CheckOut.cshtml
@@ -1,2 +1,163 @@
-﻿@model BoutikOnline.Areas.Boutik.Models.Panier
-bravoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo!
+﻿@model BoutikOnline.Areas.Membre.Models.PanierUser
+
+<section id="cart_items">
+    <div class="container">
+        <div class="shopper-informations">
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="shopper-info">
+                        <p>Shopper Information</p>
+                        <form>
+                            <input type="text" placeholder="Display Name" value="@Model.Client.Name">
+                            <input type="text" placeholder="Display FirstName" value="@Model.Client.FirstName">
+                        </form>
+                        <a class="btn btn-primary" href="">Continue</a>
+                    </div>
+                </div>
+                <div class="col-sm-5 clearfix">
+                    <div class="bill-to">
+                        <p>Bill To</p>
+                        <div class="form-one">
+                            <form>
+                                <input type="text" placeholder="Company Name" value="@Model.Client.Company"/>
+                                <input type="text" placeholder="Email*" value="@Model.Client.Mail">
+                                <input type="text" placeholder="Title">
+                                <input type="text" placeholder="First Name *" value="@Model.Client.FirstName">                                
+                                <input type="text" placeholder="Last Name *" value="@Model.Client.Name">
+                                <input type="text" placeholder="Address 1 *">
+                                <input type="text" placeholder="Address 2">
+                            </form>
+                        </div>
+                        <div class="form-two">
+                            <form>
+                                <input type="text" placeholder="Zip / Postal Code *">
+                                <select>
+                                    <option>-- Country --</option>
+                                    <option>United States</option>
+                                    <option>Bangladesh</option>
+                                    <option>UK</option>
+                                    <option>India</option>
+                                    <option>Pakistan</option>
+                                    <option>Ucrane</option>
+                                    <option>Canada</option>
+                                    <option>Dubai</option>
+                                </select>
+                                <select>
+                                    <option>-- State / Province / Region --</option>
+                                    <option>United States</option>
+                                    <option>Bangladesh</option>
+                                    <option>UK</option>
+                                    <option>India</option>
+                                    <option>Pakistan</option>
+                                    <option>Ucrane</option>
+                                    <option>Canada</option>
+                                    <option>Dubai</option>
+                                </select>
+                                <input type="password" placeholder="Confirm password">
+                                <input type="text" placeholder="Phone *">
+                                <input type="text" placeholder="Mobile Phone">
+                                <input type="text" placeholder="Fax">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="review-payment">
+            <h2>Récapitulatif de votre commande</h2>
+        </div>
+
+        <div class="table-responsive cart_info">
+            <table class="table table-condensed">
+                <thead>
+                    <tr class="cart_menu">
+                        <td class="image">Item</td>
+                        <td class="description"></td>
+                        <td class="price">Price</td>
+                        <td class="quantity">Quantity</td>
+                        <td class="total">Total</td>
+                        <td></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.Panier.Lignes)
+                    {
+                        <tr>
+                            <td class="cart_product">
+                                <a href=""><img src="~/Content/images/@item.ZeDave.DevPicture" alt="" style="width:70px; height:90px;"></a>
+                            </td>
+                            <td class="cart_description">
+                                <h4><a href="">@item.ZeDave.DevFirstName @item.ZeDave.DevName</a></h4>
+                                <p>Web ID: @item.ZeDave.IdDev</p>
+                                <p>Category: @item.ZeDave.NomCategPrincipale</p>
+                            </td>
+                            <td class="cart_price">
+                                @if (item.Choix == item.ZeDave.DevDayCost)
+                                {
+                                    <p>@item.ZeDave.DevDayCost€/Jour</p>
+                                }
+                                else if (item.Choix == item.ZeDave.DevHourCost)
+                                {
+                                    <p>@item.ZeDave.DevHourCost€/heure</p>
+                                }
+                                else
+                                {
+                                    <p>@item.ZeDave.DevMonthCost€/Mois</p>
+                                }
+                            </td>
+                            <td class="cart_quantity">
+                                <div class="cart_quantity_button">
+                                    <p>@item.Qte</p>
+                                </div>
+                            </td>
+                            <td class="cart_total">
+                                @if (item.Choix == item.ZeDave.DevHourCost)
+                                {
+                                    <p class="cart_total_price">@(item.TotalLigne)€</p>
+                                }
+                                else if (item.Choix == item.ZeDave.DevDayCost)
+                                {
+                                    <p class="cart_total_price">@(item.TotalLigne)€</p>
+                                }
+                                else
+                                {
+                                    <p class="cart_total_price">@(item.Qte * (int)item.ZeDave.DevMonthCost)€</p>
+                                }
+
+                            </td>
+                        </tr>
+                    }
+                    <tr class="cart_menu">
+                        <td class="image"></td>
+                        <td class="description"></td>
+                        <td class="price">Price</td>
+                        <td class="quantity">Dev Tax (21%)</td>
+                        <td class="total">Total</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td>@Model.Panier.Total€</td>
+                        @{double tax = (Model.Panier.Total * 21) / 100;}
+                        <td>@tax€</td>
+                        @{double total = Model.Panier.Total + tax;}
+                        <td>@total €</td>
+                    </tr>
+                </tbody>
+            </table>           
+        </div>
+        <div class="payment-options">
+            <span>
+                <label><input type="checkbox"> Direct Bank Transfer</label>
+            </span>
+            <span>
+                <label><input type="checkbox"> Check Payment</label>
+            </span>
+            <span>
+                <label><input type="checkbox"> Paypal</label>
+            </span>
+        </div>
+    </div>
+</section>
