--- a/BoutikOnline/Areas/Membre/Views/Login/LoginForm.cshtml
+++ b/BoutikOnline/Areas/Membre/Views/Login/LoginForm.cshtml
@@ -7,6 +7,7 @@
             <div class="col-sm-4 col-sm-offset-1">
                 <div class="login-form">
                     <!--login form-->
+                    <span style="color:Blue;">@ViewBag.Message</span>
                     @if (Session["login"] == null)
                     {
                         <h2>Login to your account</h2>
@@ -34,13 +35,10 @@
                 <div class="signup-form">
                     <!--sign up form-->
                     <h2>New User Signup!</h2>
-                    <form action="~/Login/Inscription" method="post">
+                    <form action="~/Membre/Login/Inscription" method="post">
                         <input type="text" placeholder="Name" name="txtName" />
                         <input type="text" placeholder="First Name" name="txtFirstName" />
-                        <input type="email" placeholder="Email Address" name="txtEmail" />
-                        <input type="text" placeholder="Company" name="txtCompany" />
-                        <input type="text" placeholder="Login" name="txtLogin" />
-                        <input type="password" placeholder="Password" name="txtPassword" />
+                        <input type="email" placeholder="Email Address" name="txtEmail" />                        
                         <button type="submit" class="btn btn-default">Signup</button>
                     </form>
                 </div><!--/sign up form-->
